@@ -1,33 +1,30 @@
 package year2023;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
 
 public class Day13_1 {
 
-    public static void main(String[] args) throws IOException {
-        List<String> lines = Files.readAllLines(Paths.get(args[0]));
+    public String part1(List<String> lines) {
         int result = 0;
 
         while (!lines.isEmpty()) {
             int index = lines.indexOf("");
 
             List<String> subLines = lines.subList(0, index == -1 ? lines.size() : index);
-            result += 100 * getReflection(subLines, false, 0, 0);
-            result += getReflection(reverse(subLines), false, 0, 0);
+            result += 100 * getReflection(subLines);
+            result += getReflection(reverse(subLines));
 
             lines = index == -1 ? new ArrayList<>() : lines.subList(index + 1, lines.size());
         }
 
-        System.out.println(result);
+        return String.valueOf(result);
     }
 
-    private static List<String> reverse(List<String> lines) {
+    private List<String> reverse(List<String> lines) {
         List<String> reversedLines = new ArrayList<>();
 
-        for (int i = 0; i < lines.get(0).length(); i++) {
+        for (int i = 0; i < lines.getFirst().length(); i++) {
             StringBuilder reversedLine = new StringBuilder();
 
             for (String line : lines) {
@@ -40,7 +37,7 @@ public class Day13_1 {
         return reversedLines;
     }
 
-    private static int getReflection(List<String> lines, boolean checkFlipped, int flippedIndex, int size) {
+    private int getReflection(List<String> lines) {
         for (int i = 1; i < lines.size(); i++) {
             if (lines.get(i).equals(lines.get(i - 1))) {
                 boolean reflection = true;
@@ -53,15 +50,7 @@ public class Day13_1 {
                 }
 
                 if (reflection) {
-                    if (checkFlipped) {
-                        int reflectionLength = Math.min(size - i, i);
-
-                        if (flippedIndex >= i - reflectionLength && flippedIndex <= i + reflectionLength - 1) {
-                            return i;
-                        }
-                    } else {
-                        return i;
-                    }
+                    return i;
                 }
             }
         }
